; ModuleID = '/home/carl/AnghaBench/jerryscript/jerry-ext/handler/extr_handler-assert.c_jerryx_handler_assert_throw.c'
source_filename = "/home/carl/AnghaBench/jerryscript/jerry-ext/handler/extr_handler-assert.c_jerryx_handler_assert_throw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@JERRY_ERROR_COMMON = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"assertion failed\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @jerryx_handler_assert_throw(i32 %0, i32 %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* %9, align 4
  %13 = icmp eq i32 %12, 1
  br i1 %13, label %14, label %28

14:                                               ; preds = %4
  %15 = load i32*, i32** %8, align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 0
  %17 = load i32, i32* %16, align 4
  %18 = call i64 @jerry_value_is_boolean(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %28

20:                                               ; preds = %14
  %21 = load i32*, i32** %8, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 0
  %23 = load i32, i32* %22, align 4
  %24 = call i64 @jerry_get_boolean_value(i32 %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %20
  %27 = call i32 @jerry_create_boolean(i32 1)
  store i32 %27, i32* %5, align 4
  br label %31

28:                                               ; preds = %20, %14, %4
  %29 = load i32, i32* @JERRY_ERROR_COMMON, align 4
  %30 = call i32 @jerry_create_error(i32 %29, i32* bitcast ([17 x i8]* @.str to i32*))
  store i32 %30, i32* %5, align 4
  br label %31

31:                                               ; preds = %28, %26
  %32 = load i32, i32* %5, align 4
  ret i32 %32
}

declare dso_local i64 @jerry_value_is_boolean(i32) #1

declare dso_local i64 @jerry_get_boolean_value(i32) #1

declare dso_local i32 @jerry_create_boolean(i32) #1

declare dso_local i32 @jerry_create_error(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
